--- a/slots/index.html
+++ b/slots/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <!-- 抽奖停止滚动范围从 0 到 -360，在前后各塞一个英雄，不会留白。 -->
     <div class="slots-container">
         <div class="superheros">
             <div class="superheros-list01">
+                <!-- 在前后各塞一个英雄，不会留白。 -->
                 <img src="dev/image/superheroes-10.png">
                 <img src="dev/image/superheroes-01.png">
                 <img src="dev/image/superheroes-02.png">
@@ -54,8 +54,9 @@
                 <img src="dev/image/superheroes-01.png">
             </div>
         </div>
+        <button id="start" class="slots-container-btn"></button>
+        <p class="slots-container-last" id="slotsDegree">3</p>
     </div>
-    <button id="start">开始抽奖</button>
     <script type="text/javascript" src="static/js/index.js"></script>
 </body>
 
