--- a/slots/index.html
+++ b/slots/index.html
@@ -56,10 +56,7 @@
         </div>
         <button id="start" class="slots-container-btn"></button>
     </div>
-    <!-- 引入老虎机js -->
-    <script type="text/javascript" src="static/js/slotmachine.js"></script>
-    <!-- 页面js -->
-    <script type="text/javascript" src="static/js/app.js"></script>
+    <script type="text/javascript" src="static/js/index.js"></script>
 </body>
 
 </html>
