--- a/html/wheelofFortune.html
+++ b/html/wheelofFortune.html
@@ -20,7 +20,7 @@
      * @param 	{number} 	counts  	动画循环次数
      * @param 	{number} 	duration 	动画持续时间
      * @param 	{number} 	total  		幸运奖盘奖品数量，该值用于分割每份奖品所占的角度
-     * @method  {function}  callback    动画结束后执行回调，该回调带有 move() 传入的奖品序列号，因此可在此作中奖逻辑处理
+     * @method  {function}  callback    回调带有 move() 传入的 prize 序列号，在此作中奖逻辑处理
      * @method 	{function} 	move()		设定 WheelofFortune实例每次运行的终点位置
      * @method  {function} 	start() 	执行动画
      */
