--- a/html/wheelofFortune.html
+++ b/html/wheelofFortune.html
@@ -15,21 +15,21 @@
     <script type="text/javascript" src="../static/js/wheelofFortune.js"></script>
     <script type="text/javascript">
     /**
-     * @type 	{class} 				这是一个幸运转盘动画
-     * @param 	{string} 	element 	动画对象
-     * @param 	{number} 	counts  	动画循环次数
-     * @param 	{number} 	duration 	动画持续时间
-     * @param 	{number} 	total  		幸运奖盘奖品数量，该值用于分割每份奖品所占的角度
+     * @type    {class}     WheelofFortune  这是一个幸运转盘动画
+     * @param   {string}    element     动画对象
+     * @param   {number}    counts      动画循环次数
+     * @param   {number}    duration    动画持续时间
+     * @param   {number}    total       幸运奖盘奖品数量，该值用于分割每份奖品所占的角度
      * @method  {function}  callback    回调带有 move() 传入的 prize 序列号，在此作中奖逻辑处理
-     * @method 	{function} 	move()		设定 WheelofFortune实例每次运行的终点位置
-     * @method  {function} 	start() 	执行动画
+     * @method  {function}  move()      设定 WheelofFortune实例每次运行的终点位置
+     * @method  {function}  start()     执行动画
      */
     const wheelofFortune = new WheelofFortune({
         element: 'turnTable',
         counts: 10,
         duration: 360,
         total: 9,
-        callback:function(prize){
+        callback: function(prize) {
             console.log('中了' + prize + '等奖');
         }
     })
